added manifest json

--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,7 @@
       </link>
       <link rel="stylesheet"
       href="src/css/style.css"/>
+      <link rel="manifest" href="/manifest.json">
   </head>
   <body>
     <nav id="navbar">
